# thesis-function-app

./: README.md  function_app.py  key_vault.py  pyproject.toml  requirements.txt
tests/: test_function_app.py  test_key_vault.py
